# exercicios-python

./: README.md  pyproject.toml
exercicios/01_essencial/001_hello_world/: _readme.md  main.py  test.py  test_001.py
exercicios/01_essencial/002_divisao_03_e_05/: main.py  test_002.py
exercicios/01_essencial/apaga/: _README.md  main.py
exercicios/01_essencial/carro_alugado/: _README.md  main.py
exercicios/01_essencial/crescimento_populacao/: _README.md
exercicios/01_essencial/data_segundos/: _README.md
exercicios/01_essencial/divisao_03_e_05/: _README.md  main.py
exercicios/01_essencial/divisor_comum/: _README.md
exercicios/01_essencial/fibonacci/: _README.md  main.py
exercicios/01_essencial/fumante/: _README.md  main.py
exercicios/01_essencial/hello_world/: _README.md
exercicios/01_essencial/lista_par_e_impar/: _README.md
exercicios/01_essencial/metro_milimetro/: _README.md
exercicios/01_essencial/papagaio/: _README.md  main.py
exercicios/01_essencial/pescador/: _README.md  main.py
exercicios/01_essencial/quantidade_preco/: _README.md
exercicios/01_essencial/salario_descontos/: _README.md  main.py
exercicios/01_essencial/soma_03_05/: _README.md  main.py
exercicios/01_essencial/soma_dois/: _README.md  main.py
exercicios/01_essencial/soma_num_int/: _README.md  main.py
exercicios/01_essencial/triangulo/: _README.md  main.py
exercicios/01_essencial/troca_letras/: _README.md  main.py
exercicios/01_essencial/usuario_senha/: _README.md
exercicios/01_essencial/vetores/: _README.md
scripts/: cria_pasta.py
(+13 files in other folders)
